<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/app_background">

    <TextView
        android:id="@+id/app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quote_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/card.background"
        android:paddingBottom="36dp"
        app:layout_constraintBottom_toTopOf="@id/previous_cl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_tv"
        app:layout_constraintVertical_bias="0.41000003">

        <ImageView
            android:id="@+id/quotes_imv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/quotes_ic"
            android:scaleX="-1"
            app:tint="@color/image.tint"
            android:contentDescription="@string/quotes"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quote_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/lorem"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorOnPrimary"
            app:layout_constraintTop_toBottomOf="@id/quotes_imv" />

        <TextView
            android:id="@+id/author_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:textSize="12sp"
            android:textColor="@color/colorOnSurface"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/quote_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share"
        android:src="@drawable/share_ic"
        android:layout_marginHorizontal="22dp"
        app:layout_constraintTop_toBottomOf="@id/quote_container"
        app:layout_constraintEnd_toEndOf="@id/quote_container"
        app:layout_constraintBottom_toBottomOf="@id/quote_container"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/previous_cl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/secondary_buttons_background"
        android:padding="6dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/previous_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textAlignment="textStart"
            android:textColor="@color/colorOnSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/previous_imv"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@string/previous_action_icon"
            android:scaleType="centerInside"
            android:scaleX="-1"
            android:src="@drawable/right_arrow_ic"
            app:layout_constraintBottom_toBottomOf="@id/previous_tv"
            app:layout_constraintEnd_toStartOf="@id/previous_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/previous_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/next_cl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/secondary_buttons_background"
        android:padding="6dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/next_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/colorOnSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <ImageView
            android:id="@+id/next_imv"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/right_arrow_ic"
            android:contentDescription="@string/next_action_icon"
            app:layout_constraintTop_toTopOf="@id/next_tv"
            app:layout_constraintBottom_toBottomOf="@id/next_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/next_tv"
            android:scaleType="centerInside"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>